# Advanced-C-Programming-Course-Exercises

./: CMakeLists.txt  README.md  flexible_array_struct.c  sum_of_array.c  the_instructor_solution.c
Challenge 1/Complex Number Types/: complex_number_types.c
Challenge 1/Flexible Array Members/: flexible_array_struct.c  the_instructor_solution.c
Challenge 1/Variable Length Arrays/: the_instructor_solution.c
Challenge 2/Setjmp and longjmp functions/: Setjmp_longjmp_functions.c  the_instructor_solution.c
Challenge 2/The goto statement/: the_goto_statement.c  the_instructor_solution.c
Challenge 3/Char functions/: char_functions.c  the_instructor_solution.c
Variable Length Arrays/: sum_of_array.c
