cmake_minimum_required(VERSION 3.21)
project(Advanced_C_Programming_Course_Exercises)

set(CMAKE_CXX_STANDARD 14)

add_executable(Advanced_C_Programming_Course_Exercises
        .idea/.gitignore
        ".idea/Advanced C Programming Course Exercises.iml"
        .idea/modules.xml
        .idea/workspace.xml
        "Variable Length Arrays/sum_of_array.c")
